nginx-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    tier: application
spec:
  revisionHistoryLimit: 0
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:mainline
          ports:
          - containerPort: 80
          volumeMounts:
          - name: content
            mountPath: /usr/share/nginx/html
      volumes: 
        - name: content
          persistentVolumeClaim:
            claimName: nginx-pvc
            readOnly: true
