nginx-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: application
  name: nginx-deployment
  namespace: nginx-website
spec:
  type: ClusterIP
  ports:
    - port: 80 # Port exposed by the Service
      protocol: TCP
      targetPort: 80 # Pod internal port for software as it was develpoed
  selector:
    run: nginx
