nginx-website/route-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route-kong
  namespace: nginx-website # optional, set by kustomization
spec:
  parentRefs:
    - name: gateway-kong
      namespace: gateway-kong
  hostnames:
    - "web.k.k8s.tablettenschrank.de"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-deployment
          port: 80
