nginx-website/route-nginx.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: nginx-route-nginx
#   namespace: nginx-website
# spec:
#   parentRefs:
#     - name: gateway-nginx
#       namespace: gateway-nginx
#   hostnames:
#     - "web.n.k8s.tablettenschrank.de"
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: nginx-deployment
#           port: 8080

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route-nginx
  namespace: nginx-website # optional, set by kustomization
spec:
  parentRefs:
  - name: gateway-nginx
    # sectionName: http-listener
    namespace: gateway-nginx
  hostnames:
  - "web.n.k8s.tablettenschrank.de"
  - "web2.n.k8s.tablettenschrank.de"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-deployment
      port: 80
