nginx-website/route-traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route-traefik
  namespace: nginx-website # optional, set by kustomization
spec:
  parentRefs:
    - name: gateway-traefikg
      namespace: gateway-traefik
  hostnames:
    - "k8s.tablettenschrank.de"
    - "web.t.k8s.tablettenschrank.de"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-deployment
          port: 80
